// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge Component renders a badge with an extra 1`] = `
<DocumentFragment>
  <div
    class="badge"
  >
    <div
      class="icon"
      data-testid="badge-icon"
    >
      <svg
        color="#898989"
        fill="currentColor"
        height="48"
        role="img"
        stroke="currentColor"
        stroke-width="0"
        style="color: rgb(137, 137, 137);"
        viewBox="0 0 256 256"
        width="48"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M201.54,54.46A104,104,0,0,0,54.46,201.54,104,104,0,0,0,201.54,54.46ZM184,195.87a87.16,87.16,0,0,1-16,10.5V99.31l16-16Zm-80-32.56,16-16v68.28a88.37,88.37,0,0,1-16-3ZM88,206.37a87,87,0,0,1-16.3-10.76L88,179.31Zm48-75.06,16-16v97.32a88.37,88.37,0,0,1-16,3ZM40,128A88,88,0,0,1,184.3,60.39L60.38,184.31A87.34,87.34,0,0,1,40,128Zm160,50.59V77.41a88,88,0,0,1,0,101.18Z"
        />
      </svg>
    </div>
    <div
      class="content"
    >
      <div
        class="title"
      >
        <h3
          aria-label="Title"
          class="mia-platform-typography mia-platform-typography-ellipsis mia-platform-typography-ellipsis-single-line h3"
          role="h3"
        >
          Title
        </h3>
      </div>
      <div
        class="mia-platform-typography mia-platform-typography-ellipsis mia-platform-typography-ellipsis-single-line bodyS"
        role="paragraph"
      >
        Description
      </div>
    </div>
    <div
      class="extra"
    >
      <button
        class="mia-platform-btn mia-platform-btn-primary mia-platform-btn-color-primary mia-platform-btn-variant-solid button buttonMd"
        type="button"
      >
        <div
          class="buttonText"
        >
          Button
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Badge Component renders a badge with description 1`] = `
<DocumentFragment>
  <div
    class="badge"
  >
    <div
      class="icon"
      data-testid="badge-icon"
    >
      <svg
        color="#898989"
        fill="currentColor"
        height="48"
        role="img"
        stroke="currentColor"
        stroke-width="0"
        style="color: rgb(137, 137, 137);"
        viewBox="0 0 256 256"
        width="48"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M201.54,54.46A104,104,0,0,0,54.46,201.54,104,104,0,0,0,201.54,54.46ZM184,195.87a87.16,87.16,0,0,1-16,10.5V99.31l16-16Zm-80-32.56,16-16v68.28a88.37,88.37,0,0,1-16-3ZM88,206.37a87,87,0,0,1-16.3-10.76L88,179.31Zm48-75.06,16-16v97.32a88.37,88.37,0,0,1-16,3ZM40,128A88,88,0,0,1,184.3,60.39L60.38,184.31A87.34,87.34,0,0,1,40,128Zm160,50.59V77.41a88,88,0,0,1,0,101.18Z"
        />
      </svg>
    </div>
    <div
      class="content"
    >
      <div
        class="title"
      >
        <h3
          aria-label="Title"
          class="mia-platform-typography mia-platform-typography-ellipsis mia-platform-typography-ellipsis-single-line h3"
          role="h3"
        >
          Title
        </h3>
      </div>
      <div
        class="mia-platform-typography mia-platform-typography-ellipsis mia-platform-typography-ellipsis-single-line bodyS"
        role="paragraph"
      >
        Description
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Badge Component renders a badge with icon and title 1`] = `
<DocumentFragment>
  <div
    class="badge"
  >
    <div
      class="icon"
      data-testid="badge-icon"
    >
      <svg
        color="#898989"
        fill="currentColor"
        height="48"
        role="img"
        stroke="currentColor"
        stroke-width="0"
        style="color: rgb(137, 137, 137);"
        viewBox="0 0 256 256"
        width="48"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M201.54,54.46A104,104,0,0,0,54.46,201.54,104,104,0,0,0,201.54,54.46ZM184,195.87a87.16,87.16,0,0,1-16,10.5V99.31l16-16Zm-80-32.56,16-16v68.28a88.37,88.37,0,0,1-16-3ZM88,206.37a87,87,0,0,1-16.3-10.76L88,179.31Zm48-75.06,16-16v97.32a88.37,88.37,0,0,1-16,3ZM40,128A88,88,0,0,1,184.3,60.39L60.38,184.31A87.34,87.34,0,0,1,40,128Zm160,50.59V77.41a88,88,0,0,1,0,101.18Z"
        />
      </svg>
    </div>
    <div
      class="content"
    >
      <div
        class="title"
      >
        <h3
          aria-label="Title"
          class="mia-platform-typography mia-platform-typography-ellipsis mia-platform-typography-ellipsis-single-line h3"
          role="h3"
        >
          Title
        </h3>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
